--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,9 @@
     <title>Contact — Raudhatul Saadah</title>
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/contact.css" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png" />
 </head>
 
 <body>
