--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Raudhatul Saadah — Portfolio</title>
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/home.css" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png" />
 </head>
 
 <body>
@@ -78,8 +81,8 @@
       </p>
 
       <div class="hero-btns">
-        <a href="things\RaudhatulSaadahAbdulRazak_Resume.pdf" target="_blank"
-          class="btn btn-pink" download>↓ Download Resume</a>
+        <a href="things\RaudhatulSaadahAbdulRazak_Resume.pdf" target="_blank" class="btn btn-pink" download>↓ Download
+          Resume</a>
         <a href="projects.html" class="btn btn-outline">View Projects →</a>
       </div>
 
