--- a/projects.html
+++ b/projects.html
@@ -462,7 +462,7 @@
                     </div>
                     <div class="meta-item">
                         <span class="meta-key">My Role</span>
-                        <span class="meta-val">Full Stack Developer</span>
+                        <span class="meta-val">Front End Developer / Full Stack Developer</span>
                     </div>
                     <div class="meta-item">
                         <span class="meta-key">Environment</span>
